# eals

./: .gitignore  .python-version  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
eals/: __init__.py  eals.py  run.py  serializer.py  util.py
examples/: movielens.py
notebook/: benchmark.ipynb  benchmark.py  benchmark_calc_loss.py
tests/: test_eals.py  test_serializer.py
